--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -28,6 +28,6 @@ jobs:
         with:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          projectName: hoangkien.uk
+          projectName: hoangkien
           directory: ./_site
           gitHubToken: ${{ secrets.GTOKEN }}
